--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -5,6 +5,8 @@ description: Collection of the latest findings and insights about frontend devel
 tags: 
     - webpage
 permalink: /
+eleventyNavigation:
+    key: Home
 ---
 
 <article data-layout="stack" data-props="space:2xl">
@@ -13,8 +15,9 @@ permalink: /
             <h1>Frontend Stories</h1>
             <p>{{ description or meta.site_description }}</p>
             <div>
-                <a data-button="variant:primary" href="/categories">Browse all categories</a>
+                <a data-button="variant:primary" href="/stories">Browse all stories</a>
             </div>
+
         </div>
     </section>
 </article>
