--- a/src/pages/stories/stories-page.njk
+++ b/src/pages/stories/stories-page.njk
@@ -5,6 +5,9 @@ description: All stories on the site grouped by categories.
 tags: 
     - webpage
 permalink: /stories/index.html
+eleventyNavigation:
+  key: Stories
+  parent: Home
 ---
 
 {% set previousPageHref = "/" %}
