--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,8 +4,14 @@
     <body data-layout="cover" data-props="noPad space:xl">
         {% include "partials/site-header.njk" %}
         <main data-layout="stack" data-props="centered x:stretch">
+            {% set navPages = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key , {allowMissing: true, includeSelf: true}) %}
+            {% if navPages.length > 0 %}
+                <nav aria-label="Breadcrumbs" class="breadcrumbs-navigation">
+                    {{ navPages | eleventyNavigationToHtml | safe }}
+                </nav>
+            {% endif %}
             {% block content %}
-                {{content | safe}}
+                {{ content | safe }}
             {% endblock %}
         </main>
         {% include "partials/site-footer.njk" %}
