--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -3,13 +3,13 @@
         <a data-layout="cluster" data-props="space:xs" data-heading="5" href="/">
             {% include "icons/fs-icon.njk" %}
         </a>
-        <a data-button="small" data-props="noBorder" href="#">
+        {# <a data-button="small" data-props="noBorder" href="#">
             <span aria-hidden="true">
                 {% include "../icons/search-icon.njk" %}
             </span>
             <span class="visually-hidden">
                 Search
             </span>
-        </a>
+        </a> #}
     </div>
 </header>
