--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,12 +4,8 @@
     <body data-layout="cover" data-props="noPad space:xl">
         {% include "partials/site-header.njk" %}
         <main data-layout="stack" data-props="centered x:stretch">
-            {% set navPages = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key , {allowMissing: true, includeSelf: true}) %}
-            {% if navPages.length > 0 %}
-                <nav aria-label="Breadcrumbs" class="breadcrumbs-navigation">
-                    {{ navPages | eleventyNavigationToHtml | safe }}
-                </nav>
-            {% endif %}
+        {% include "partials/site-breadcrumbs.njk" %}
+
             {% block content %}
                 {{ content | safe }}
             {% endblock %}
