feat - various UI improvements - remove fixed header - add breadcrumbs to layouts - remove categories page - improve button spacings

--- a/src/_includes/layouts/nested-article-layout.njk
+++ b/src/_includes/layouts/nested-article-layout.njk
@@ -1,5 +1,6 @@
 {% extends "layouts/base-layout.njk" %}
 {% block content %}
+    {% include "partials/site-breadcrumbs.njk" %}
     <article data-layout="stack" data-props="space:l">
         {{ content | safe }}
     </article>
