--- a/src/pages/stories/stories-page.njk
+++ b/src/pages/stories/stories-page.njk
@@ -1,5 +1,5 @@
 ---
-layout: layouts/base.njk
+layout: layouts/nested-page-layout.njk
 title: All Stories
 description: All stories on the site grouped by categories.
 tags: 
