--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -1,7 +1,9 @@
 ---
 layout: layouts/home.njk
 title: Home
-description: Collection of the latest findings and insights about frontend development.
+description: Collection of documented research findings and insights on frontend development.
+about: >-
+    Frontend Stories 2022 ©
 tags: 
     - webpage
 permalink: /
@@ -17,7 +19,6 @@ eleventyNavigation:
             <div>
                 <a data-button="variant:primary" href="/stories">Browse all stories</a>
             </div>
-
         </div>
     </section>
 </article>
