--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,15 +1,8 @@
 <header>
-    <div class="header" data-layout="cluster" data-props="y:center x:between">
-        <a data-layout="cluster" data-props="space:xs" data-heading="5" href="/">
-            {% include "icons/fs-icon.njk" %}
+    <div class="padded-container header" data-layout="cluster" data-props="y:center x:between invert">
+        <a  data-link data-heading="6" href="/">
+            {{meta.site_name}}
         </a>
-        {# <a data-button="small" data-props="noBorder" href="#">
-            <span aria-hidden="true">
-                {% include "../icons/search-icon.njk" %}
-            </span>
-            <span class="visually-hidden">
-                Search
-            </span>
-        </a> #}
+
     </div>
 </header>
