--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,10 +1,10 @@
-<li class="story-card" data-layout="box stack">
-    <a data-link class="story-card__title" data-props="split"  href="/{{ entry.slug  }}">{{ entry.name }}</a>
-    {% if entry.categories.length %}
+<li class="story-card">
+    <a data-link class="story-card__title" href="/{{ entry.slug  }}">{{ entry.name }}</a>
+    {# {% if entry.categories.length %}
         <div class="story-card__categories" data-layout="cluster" >
             {%- for category in entry.categories %}
                 <a  href="/categories/{{category.name | slugify}}" data-tag>{{ category.name }}</a>
             {% endfor -%}
         </div>
-    {% endif %}
+    {% endif %} #}
 </li>
