--- a/src/css/_layouts.css
+++ b/src/css/_layouts.css
@@ -1,7 +1,5 @@
 /*----------  Box Layout  ----------*/
 [data-layout~="box"] {
-  /* --color-light: var(--gray-100);
-    --color-dark: var(--gray-900); */
   --padding: var(--space-s);
   display: block;
   padding-top: var(--padding);
@@ -24,7 +22,8 @@
     background-color: var(--color-dark);
   }
   */
-[data-layout~="box"][data-props~="invert"] {
+/* [data-layout~="box"] */
+[data-props~="invert"] {
   /* --OFF: ;
   --ON: initial;
   --inverted: var(--ON); */
