--- a/src/css/components/_tags.css
+++ b/src/css/components/_tags.css
@@ -1,13 +1,20 @@
 [data-tag] {
-    background: linear-gradient(to bottom, var(--gray-100), var(--gray-300));
-    color: var(--gray-900);
-    display: block;
-    width: max-content;
-    padding: calc(var(--space-xs) * 0.2) var(--space-xs);
-    border-color: var(--color-dark);
-    font-size: var(--step--1);
-    font-weight: 500;
-    border: var(--border-thin) solid;
-    text-decoration: none;
-    font-family: var(--sans-font);
-  }
+  /* --color-green: rgb(43, 89, 63); */
+  background-color: var(--gray-300);
+  color: var(--gray-900);
+  display: block;
+  width: max-content;
+  padding: calc(var(--space-xs) * 0.2) var(--space-xs);
+  border-color: var(--color-dark);
+  font-size: var(--step--1);
+  /* font-weight: 500; */
+  /* border: var(--border-thin) solid; */
+  border-radius: 3px;
+  text-decoration: none;
+  font-family: var(--sans-font);
+}
+
+
+[data-tag~="color:green"]{
+  background-color: var(--color-green);
+}
