--- a/src/pages/categories/category-pagination.njk
+++ b/src/pages/categories/category-pagination.njk
@@ -12,12 +12,11 @@ eleventyComputed:
 
 
 <h1 data-heading="3">
-  <span aria-hidden="true">🔖</span>
   {{ category }}
 </h1>
 <p>
   Here are some stories relating to the subject of {{ category }}.
-  <ul data-layout="grid" data-props="noPad">
+  <ul  data-props="noPad">
     {% set entries = collections.stories | filterByCategory(category) %}
     {%- for entry in entries %}
       {% include "partials/story-card-entry.njk" %}
