feat - add stories preview on homepage

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,8 +1,8 @@
 <header>
-    <div class="padded-container header" data-layout="cluster" data-props="y:center x:between invert">
-        <a  data-link data-heading="6" href="/">
+    <div class="padded-container header" data-layout="cluster" data-props="y:center x:between">
+        {# <a  data-link data-heading="6" href="/">
             {{meta.site_name}}
-        </a>
+        </a> #}
 
     </div>
 </header>
