--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,10 +1,14 @@
-<li class="story-card">
-    <a data-link class="story-card__title" href="/{{ entry.slug  }}">{{ entry.name }}</a>
+<li class="story-card" data-layout="stack" data-props="space:xs">
+    <div class="story-card__cover sans-serif" aria-hidden="true">
+        <span data-heading="2">{{entry.icon if entry.icon else '📄'}}</span>
+    </div>
+    <a data-link class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
+
     {# {% if entry.categories.length %}
-        <div class="story-card__categories" data-layout="cluster" >
-            {%- for category in entry.categories %}
-                <a  href="/categories/{{category.name | slugify}}" data-tag>{{ category.name }}</a>
-            {% endfor -%}
-        </div>
-    {% endif %} #}
+            <div class="story-card__categories" data-layout="cluster" >
+                {%- for category in entry.categories %}
+                    <a  href="/categories/{{category.name | slugify}}" data-tag>{{ category.name }}</a>
+                {% endfor -%}
+            </div>
+        {% endif %} #}
 </li>
