--- a/src/css/_colors.css
+++ b/src/css/_colors.css
@@ -17,3 +17,8 @@
     --bezier-snappy: cubic-bezier(0.25, 0.46, 0.45, 0.94);
     --bezier-swift: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
+/* TODO: complete colors */
+[data-color="green"]{
+  --background-color: ;
+  --color: ;
+}
