--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -1,24 +1,46 @@
 ---
-layout: layouts/home.njk
+layout: layouts/home-layout.njk
 title: Home
-description: Collection of documented research findings and insights on frontend development.
+description: Collection of documented findings and insights on frontend development.
 about: >-
     Frontend Stories 2022 ©
 tags: 
     - webpage
-permalink: /
-eleventyNavigation:
-    key: Home
+pagination: 
+    data: collections.categoriesAndAll
+    size: 1
+    alias: currentCategory
+permalink: "{% if currentCategory == 'All'%}/{% else %}/{{currentCategory | slugify}}/index.html{% endif %}"
+eleventyComputed:
+    eleventyNavigation:
+        key: Home
 ---
 
-<article data-layout="stack" data-props="space:2xl">
-    <section data-layout="cover" data-props="noPad">
+<article data-layout="stack" data-props="space:2xl">  
+    <section>
         <div data-layout="stack" data-props="centered space:m">
-            <h1>Frontend Stories</h1>
+            <h1 class="visually-hidden">Frontend Stories</h1>
             <p>{{ description or meta.site_description }}</p>
-            <div>
+            {# <div>
                 <a data-button="variant:primary" href="/stories">Browse all stories</a>
-            </div>
+            </div> #}
         </div>
+    </section>
+    <section id="stories" data-layout="stack" data-props="space:m">
+        <nav class="categories-navigation">
+            <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
+                {%- for category in collections.categoriesAndAll %}
+                    <li data-active="{{ 'true' if currentCategory == category else 'false' }}">
+                        <a data-link href="/{{'' if category == 'All' else category | slugify }}#stories">{{ 'Latest' if category == 'All' else category }}</a>
+                    </li>
+                {% endfor -%}
+            </ul>
+        </nav>
+        <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
+            {% set entries = collections.stories | filterByCategory(currentCategory) %}
+            {%- for entry in entries %}
+                {% include "partials/story-card-entry.njk" %}
+            {% endfor -%}
+        </ul>
     </section>
 </article>
