feat - add new logo images

--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -23,6 +23,9 @@
     <meta name="twitter:site" content="{{meta.twitter_name}}">
     <meta name="twitter:text:title" content="{{meta.title}}">
 
+
+  <link rel="manifest" href="/manifest.json" />
+
     <!-- Favicon -->
     {% if emojicon %}
         <link rel="icon" href="data:image/svg+xml,
