chore - remove markdown specific styles

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,8 +1,9 @@
 <header>
     <div class="padded-container header" data-layout="cluster" data-props="y:center x:between">
-        {# <a  data-link data-heading="6" href="/">
-            {{meta.site_name}}
-        </a> #}
+        <a class="sans-serif" data-link data-heading="4" href="/">
+            {# {{meta.site_name}} #}
+            🏠
+        </a>
 
     </div>
 </header>
